// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createSample action Creates sample with options value that is the same as existing samples 1`] = `
Object {
  "name": "test sample",
  "options": Object {
    "otherOption": false,
    "someOption": true,
  },
  "sampleTechnology": "rhapsody",
}
`;

exports[`createSample action Throws if the api fails 1`] = `
Array [
  Object {
    "message": "Saving sample...",
  },
  Object {
    "error": "We couldn't create your sample. Please try uploading it again",
  },
]
`;

exports[`createSample action Works correctly with BDRhapsody file being uploaded 1`] = `
Object {
  "name": "test sample",
  "options": Object {
    "includeAbSeq": false,
  },
  "sampleTechnology": "rhapsody",
}
`;

exports[`createSample action Works correctly with BDRhapsody file being uploaded 2`] = `
Array [
  Object {
    "message": "Saving sample...",
  },
  Object {
    "experimentId": "exp234",
    "sample": Object {
      "complete": false,
      "createdDate": "2020-01-01T00:00:00.000Z",
      "error": false,
      "experimentId": "exp234",
      "fileNames": Array [],
      "files": Object {
        "asdasda_Expression_Data.st": Object {
          "upload": Object {
            "status": "uploading",
          },
        },
      },
      "lastModified": "2020-01-01T00:00:00.000Z",
      "metadata": Object {
        "meta-1": "N.A.",
        "meta-2": "N.A.",
      },
      "name": "test sample",
      "options": Object {
        "includeAbSeq": false,
      },
      "type": "rhapsody",
      "uuid": "abc123",
    },
  },
  undefined,
]
`;

exports[`createSample action Works correctly with many files being uploaded 1`] = `
Object {
  "name": "test sample",
  "options": Object {},
  "sampleTechnology": "10x",
}
`;

exports[`createSample action Works correctly with many files being uploaded 2`] = `
Array [
  Object {
    "message": "Saving sample...",
  },
  Object {
    "experimentId": "exp234",
    "sample": Object {
      "complete": false,
      "createdDate": "2020-01-01T00:00:00.000Z",
      "error": false,
      "experimentId": "exp234",
      "fileNames": Array [],
      "files": Object {
        "barcodes.tsv.gz": Object {
          "upload": Object {
            "status": "uploading",
          },
        },
        "features.tsv.gz": Object {
          "upload": Object {
            "status": "uploading",
          },
        },
        "matrix.tsv.gz": Object {
          "upload": Object {
            "status": "uploading",
          },
        },
      },
      "lastModified": "2020-01-01T00:00:00.000Z",
      "metadata": Object {
        "meta-1": "N.A.",
        "meta-2": "N.A.",
      },
      "name": "test sample",
      "options": Object {},
      "type": "10x",
      "uuid": "abc123",
    },
  },
  undefined,
]
`;

exports[`createSample action Works correctly with one file being uploaded 1`] = `
Object {
  "name": "test sample",
  "options": Object {},
  "sampleTechnology": "10x",
}
`;

exports[`createSample action Works correctly with one file being uploaded 2`] = `
Array [
  Object {
    "message": "Saving sample...",
  },
  Object {
    "experimentId": "exp234",
    "sample": Object {
      "complete": false,
      "createdDate": "2020-01-01T00:00:00.000Z",
      "error": false,
      "experimentId": "exp234",
      "fileNames": Array [],
      "files": Object {
        "matrix.tsv.gz": Object {
          "upload": Object {
            "status": "uploading",
          },
        },
      },
      "lastModified": "2020-01-01T00:00:00.000Z",
      "metadata": Object {
        "meta-1": "N.A.",
        "meta-2": "N.A.",
      },
      "name": "test sample",
      "options": Object {},
      "type": "10x",
      "uuid": "abc123",
    },
  },
  undefined,
]
`;
